--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -20,6 +20,7 @@
                 &:hover {
                     background-color: #1D6E65;
                     color: #fff;
+                    border-color: #1D6E65;
                 }
             }
             &-1, &-2 {
